crates/as2/src/lexer/snapshots/rascal_as2__lexer__tests__all_samples@AnInterface.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/as2/AnInterface.as
---
- kind:
    Keyword: Interface
  span:
    start: 0
    end: 9
  raw: interface
- kind: Identifier
  span:
    start: 10
    end: 21
  raw: AnInterface
- kind: OpenBrace
  span:
    start: 22
    end: 23
  raw: "{"
- kind: Newline
  span:
    start: 23
    end: 24
  raw: "\n"
- kind:
    Keyword: Function
  span:
    start: 28
    end: 36
  raw: function
- kind: Identifier
  span:
    start: 37
    end: 40
  raw: foo
- kind: OpenParen
  span:
    start: 40
    end: 41
  raw: (
- kind: CloseParen
  span:
    start: 41
    end: 42
  raw: )
- kind: Semicolon
  span:
    start: 42
    end: 43
  raw: ;
- kind: Newline
  span:
    start: 43
    end: 44
  raw: "\n"
- kind: CloseBrace
  span:
    start: 44
    end: 45
  raw: "}"
- kind: Newline
  span:
    start: 45
    end: 46
  raw: "\n"
