crates/as2/src/lexer/snapshots/rascal_as2__lexer__tests__all_samples@assign_variable_many_ways.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/as2/assign_variable_many_ways.as
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 11
  raw: message
- kind:
    Operator: Assign
  span:
    start: 12
    end: 13
  raw: "="
- kind:
    String: Double
  span:
    start: 14
    end: 21
  raw: Hello
- kind:
    Operator: Add
  span:
    start: 22
    end: 23
  raw: +
- kind:
    String: Double
  span:
    start: 24
    end: 27
  raw: " "
- kind: Semicolon
  span:
    start: 27
    end: 28
  raw: ;
- kind: Newline
  span:
    start: 28
    end: 29
  raw: "\n"
- kind: Identifier
  span:
    start: 29
    end: 36
  raw: message
- kind:
    Operator: AddAssign
  span:
    start: 37
    end: 39
  raw: +=
- kind:
    String: Double
  span:
    start: 40
    end: 47
  raw: World
- kind: Semicolon
  span:
    start: 47
    end: 48
  raw: ;
- kind: Newline
  span:
    start: 48
    end: 49
  raw: "\n"
- kind: Identifier
  span:
    start: 49
    end: 56
  raw: message
- kind:
    Operator: Assign
  span:
    start: 57
    end: 58
  raw: "="
- kind: Identifier
  span:
    start: 59
    end: 66
  raw: message
- kind:
    Operator: Add
  span:
    start: 67
    end: 68
  raw: +
- kind:
    String: Double
  span:
    start: 69
    end: 72
  raw: "!"
- kind: Semicolon
  span:
    start: 72
    end: 73
  raw: ;
- kind: Newline
  span:
    start: 73
    end: 74
  raw: "\n"
- kind: Identifier
  span:
    start: 74
    end: 79
  raw: trace
- kind: OpenParen
  span:
    start: 79
    end: 80
  raw: (
- kind: Identifier
  span:
    start: 80
    end: 87
  raw: message
- kind: CloseParen
  span:
    start: 87
    end: 88
  raw: )
- kind: Semicolon
  span:
    start: 88
    end: 89
  raw: ;
- kind: Newline
  span:
    start: 89
    end: 90
  raw: "\n"
- kind: Newline
  span:
    start: 90
    end: 91
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 91
    end: 94
  raw: var
- kind: Identifier
  span:
    start: 95
    end: 96
  raw: a
- kind:
    Operator: Assign
  span:
    start: 96
    end: 97
  raw: "="
- kind: Integer
  span:
    start: 97
    end: 98
  raw: "1"
- kind: Comma
  span:
    start: 98
    end: 99
  raw: ","
- kind: Identifier
  span:
    start: 100
    end: 101
  raw: b
- kind: Comma
  span:
    start: 101
    end: 102
  raw: ","
- kind: Identifier
  span:
    start: 103
    end: 104
  raw: c
- kind:
    Operator: Assign
  span:
    start: 104
    end: 105
  raw: "="
- kind: Integer
  span:
    start: 105
    end: 106
  raw: "3"
- kind: Semicolon
  span:
    start: 106
    end: 107
  raw: ;
- kind: Newline
  span:
    start: 107
    end: 108
  raw: "\n"
- kind: Identifier
  span:
    start: 108
    end: 113
  raw: trace
- kind: OpenParen
  span:
    start: 113
    end: 114
  raw: (
- kind:
    String: Double
  span:
    start: 114
    end: 119
  raw: "a: "
- kind:
    Operator: Add
  span:
    start: 120
    end: 121
  raw: +
- kind: Identifier
  span:
    start: 122
    end: 123
  raw: a
- kind: CloseParen
  span:
    start: 123
    end: 124
  raw: )
- kind: Semicolon
  span:
    start: 124
    end: 125
  raw: ;
- kind: Identifier
  span:
    start: 131
    end: 136
  raw: trace
- kind: OpenParen
  span:
    start: 136
    end: 137
  raw: (
- kind:
    String: Double
  span:
    start: 137
    end: 142
  raw: "b: "
- kind:
    Operator: Add
  span:
    start: 143
    end: 144
  raw: +
- kind: Identifier
  span:
    start: 145
    end: 146
  raw: b
- kind: CloseParen
  span:
    start: 146
    end: 147
  raw: )
- kind: Semicolon
  span:
    start: 147
    end: 148
  raw: ;
- kind: Identifier
  span:
    start: 162
    end: 167
  raw: trace
- kind: OpenParen
  span:
    start: 167
    end: 168
  raw: (
- kind:
    String: Double
  span:
    start: 168
    end: 173
  raw: "c: "
- kind:
    Operator: Add
  span:
    start: 174
    end: 175
  raw: +
- kind: Identifier
  span:
    start: 176
    end: 177
  raw: c
- kind: CloseParen
  span:
    start: 177
    end: 178
  raw: )
- kind: Semicolon
  span:
    start: 178
    end: 179
  raw: ;
