crates/as2/src/lexer/snapshots/rascal_as2__lexer__tests__all_samples@function.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/as2/function.as
---
- kind:
    Keyword: Function
  span:
    start: 0
    end: 8
  raw: function
- kind: Identifier
  span:
    start: 9
    end: 13
  raw: test
- kind: OpenParen
  span:
    start: 13
    end: 14
  raw: (
- kind: CloseParen
  span:
    start: 14
    end: 15
  raw: )
- kind: OpenBrace
  span:
    start: 16
    end: 17
  raw: "{"
- kind: Newline
  span:
    start: 17
    end: 18
  raw: "\n"
- kind: Identifier
  span:
    start: 22
    end: 27
  raw: trace
- kind: OpenParen
  span:
    start: 27
    end: 28
  raw: (
- kind:
    String: Double
  span:
    start: 28
    end: 42
  raw: Test called!
- kind: CloseParen
  span:
    start: 42
    end: 43
  raw: )
- kind: Semicolon
  span:
    start: 43
    end: 44
  raw: ;
- kind: Newline
  span:
    start: 44
    end: 45
  raw: "\n"
- kind:
    Keyword: Return
  span:
    start: 49
    end: 55
  raw: return
- kind:
    String: Double
  span:
    start: 56
    end: 60
  raw: ":)"
- kind: Semicolon
  span:
    start: 60
    end: 61
  raw: ;
- kind: Newline
  span:
    start: 61
    end: 62
  raw: "\n"
- kind: CloseBrace
  span:
    start: 62
    end: 63
  raw: "}"
- kind: Newline
  span:
    start: 63
    end: 64
  raw: "\n"
- kind: Newline
  span:
    start: 64
    end: 65
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 65
    end: 68
  raw: var
- kind: Identifier
  span:
    start: 69
    end: 73
  raw: anon
- kind:
    Operator: Assign
  span:
    start: 74
    end: 75
  raw: "="
- kind:
    Keyword: Function
  span:
    start: 76
    end: 84
  raw: function
- kind: OpenParen
  span:
    start: 84
    end: 85
  raw: (
- kind: Identifier
  span:
    start: 85
    end: 86
  raw: a
- kind: Comma
  span:
    start: 86
    end: 87
  raw: ","
- kind: Identifier
  span:
    start: 88
    end: 89
  raw: b
- kind: CloseParen
  span:
    start: 89
    end: 90
  raw: )
- kind: OpenBrace
  span:
    start: 90
    end: 91
  raw: "{"
- kind: Newline
  span:
    start: 91
    end: 92
  raw: "\n"
- kind: Identifier
  span:
    start: 96
    end: 101
  raw: trace
- kind: OpenParen
  span:
    start: 101
    end: 102
  raw: (
- kind:
    String: Double
  span:
    start: 102
    end: 130
  raw: Anonymous function called!
- kind: CloseParen
  span:
    start: 130
    end: 131
  raw: )
- kind: Semicolon
  span:
    start: 131
    end: 132
  raw: ;
- kind: Newline
  span:
    start: 132
    end: 133
  raw: "\n"
- kind: Identifier
  span:
    start: 137
    end: 142
  raw: trace
- kind: OpenParen
  span:
    start: 142
    end: 143
  raw: (
- kind:
    String: Double
  span:
    start: 143
    end: 149
  raw: "a = "
- kind:
    Operator: Add
  span:
    start: 150
    end: 151
  raw: +
- kind: Identifier
  span:
    start: 152
    end: 153
  raw: a
- kind:
    Operator: Add
  span:
    start: 154
    end: 155
  raw: +
- kind:
    String: Double
  span:
    start: 156
    end: 164
  raw: ", b = "
- kind:
    Operator: Add
  span:
    start: 165
    end: 166
  raw: +
- kind: Identifier
  span:
    start: 167
    end: 168
  raw: b
- kind: CloseParen
  span:
    start: 168
    end: 169
  raw: )
- kind: Semicolon
  span:
    start: 169
    end: 170
  raw: ;
- kind: Newline
  span:
    start: 170
    end: 171
  raw: "\n"
- kind: CloseBrace
  span:
    start: 171
    end: 172
  raw: "}"
- kind: Semicolon
  span:
    start: 172
    end: 173
  raw: ;
- kind: Newline
  span:
    start: 173
    end: 174
  raw: "\n"
- kind: Identifier
  span:
    start: 174
    end: 178
  raw: anon
- kind: OpenParen
  span:
    start: 178
    end: 179
  raw: (
- kind:
    String: Double
  span:
    start: 179
    end: 183
  raw: aa
- kind: Comma
  span:
    start: 183
    end: 184
  raw: ","
- kind:
    String: Double
  span:
    start: 185
    end: 189
  raw: bb
- kind: CloseParen
  span:
    start: 189
    end: 190
  raw: )
- kind: Semicolon
  span:
    start: 190
    end: 191
  raw: ;
- kind: Newline
  span:
    start: 191
    end: 192
  raw: "\n"
- kind: Newline
  span:
    start: 192
    end: 193
  raw: "\n"
- kind: Identifier
  span:
    start: 193
    end: 198
  raw: trace
- kind: OpenParen
  span:
    start: 198
    end: 199
  raw: (
- kind: Identifier
  span:
    start: 199
    end: 203
  raw: test
- kind: OpenParen
  span:
    start: 203
    end: 204
  raw: (
- kind: CloseParen
  span:
    start: 204
    end: 205
  raw: )
- kind:
    Operator: Add
  span:
    start: 206
    end: 207
  raw: +
- kind: Identifier
  span:
    start: 208
    end: 212
  raw: test
- kind: OpenParen
  span:
    start: 212
    end: 213
  raw: (
- kind: CloseParen
  span:
    start: 213
    end: 214
  raw: )
- kind: CloseParen
  span:
    start: 214
    end: 215
  raw: )
- kind: Semicolon
  span:
    start: 215
    end: 216
  raw: ;
- kind: Newline
  span:
    start: 216
    end: 217
  raw: "\n"
- kind: Newline
  span:
    start: 217
    end: 218
  raw: "\n"
- kind:
    Keyword: Function
  span:
    start: 218
    end: 226
  raw: function
- kind: OpenParen
  span:
    start: 226
    end: 227
  raw: (
- kind: CloseParen
  span:
    start: 227
    end: 228
  raw: )
- kind: OpenBrace
  span:
    start: 229
    end: 230
  raw: "{"
- kind: CloseBrace
  span:
    start: 230
    end: 231
  raw: "}"
- kind: Newline
  span:
    start: 231
    end: 232
  raw: "\n"
